# phidata-starter-aws

./: README.md  example.env  pyproject.toml  requirements.txt
data/: env.py
data/common/: args.py  connections.py  s3_buckets.py
data/common/connections/: aws.py  pg_db.py
data/models/: base_model.py  task_metrics.py
data/products/: README.md
data/products/crypto/: download_crypto_prices.py  prices.py  readme.md
data/products/dag_examples/: distributed_dag.py
data/products/dau/: dau.py
data/products/dau_aws/: dau_aws.py
data/products/examples/: distributed_dag.py
data/utils/: dttm.py  log.py
docs/: DEBUG.md  common_issues.md  eks_access.md  production.md  production_release.md
scripts/: _utils.sh  format.sh  install.sh  upgrade.sh
workspace/: .gitignore  config.py  settings.py
workspace/dev/: airflow.py  aws_config.py  aws_resources.py  databox.py  docker_config.py  jupyter.py  pg_dbs.py  settings.py  superset.py  traefik.py
workspace/dev/images/: __init__.py  airflow.Dockerfile  build_databox_image.sh  databox.Dockerfile  jupyter.Dockerfile
workspace/dev/jupyter_resources/: jupyter_lab_config.py  requirements-jupyter.txt
workspace/k8s/: whoami.py
workspace/k8s/dashboard/: kubernetes_dashboard.yaml
workspace/k8s/eks/: admin.py
workspace/prd/: airflow.py  aws_config.py  aws_resources.py  docker_config.py  k8s_config.py  pg_dbs.py  settings.py  superset.py  traefik.py
workspace/prd/airflow_resources/: requirements-airflow.txt
workspace/prd/images/: __init__.py  airflow.Dockerfile  build_databox_image.sh  databox.Dockerfile  (+1 more)
(+1 files in other folders)
